<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:fontFamily="@font/font_bold"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="@string/thai_airways"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/idTitleTv"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg1"
            android:fontFamily="@font/font_semibold"
            android:gravity="center"
            android:padding="@dimen/_6sdp"
            android:text="@string/id"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTv" />

        <TextView
            android:id="@+id/idTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:background="@drawable/bg2"
            android:fontFamily="@font/font_regular"
            android:gravity="center|left"
            android:padding="@dimen/_5sdp"
            android:text="kgfvb"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/idTitleTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/idTitleTv"
            app:layout_constraintTop_toTopOf="@+id/idTitleTv" />

        <TextView
            android:id="@+id/nameTitleTv"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg1"
            android:fontFamily="@font/font_semibold"
            android:gravity="center"
            android:padding="@dimen/_6sdp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTitleTv" />

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:background="@drawable/bg2"
            android:fontFamily="@font/font_regular"
            android:gravity="center|left"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/nameTitleTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameTitleTv"
            app:layout_constraintTop_toTopOf="@+id/nameTitleTv" />

        <TextView
            android:id="@+id/trpsTitleTv"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg1"
            android:fontFamily="@font/font_semibold"
            android:gravity="center"
            android:padding="@dimen/_6sdp"
            android:text="@string/trips"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTitleTv" />

        <TextView
            android:id="@+id/tripsTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:background="@drawable/bg2"
            android:fontFamily="@font/font_regular"
            android:gravity="center|left"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/trpsTitleTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/trpsTitleTv"
            app:layout_constraintTop_toTopOf="@+id/trpsTitleTv" />

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:src="@drawable/img_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tripsTv" />

        <TextView
            android:id="@+id/sloganTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:fontFamily="@font/font_semibold"
            android:padding="@dimen/_2sdp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@+id/logoImg"
            app:layout_constraintStart_toStartOf="@+id/logoImg"
            app:layout_constraintTop_toBottomOf="@+id/logoImg" />

        <TextView
            android:id="@+id/countryTitleTv"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg1"
            android:fontFamily="@font/font_semibold"
            android:gravity="center"
            android:padding="@dimen/_6sdp"
            android:text="@string/country"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sloganTv" />

        <TextView
            android:id="@+id/countryTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:background="@drawable/bg2"
            android:fontFamily="@font/font_regular"
            android:gravity="center|left"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/countryTitleTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/countryTitleTv"
            app:layout_constraintTop_toTopOf="@+id/countryTitleTv" />

        <TextView
            android:id="@+id/headQuaterTitleTv"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginStart="4dp"
            android:background="@drawable/bg1"
            android:fontFamily="@font/font_semibold"
            android:gravity="center"
            android:padding="@dimen/_6sdp"
            android:text="@string/head_quater"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryTitleTv" />

        <TextView
            android:id="@+id/headQuaterTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:background="@drawable/bg2"
            android:fontFamily="@font/font_regular"
            android:gravity="center|left"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/headQuaterTitleTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/headQuaterTitleTv"
            app:layout_constraintTop_toTopOf="@+id/headQuaterTitleTv" />

        <TextView
            android:id="@+id/websiteTitleTv"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg1"
            android:fontFamily="@font/font_semibold"
            android:gravity="center"
            android:padding="@dimen/_6sdp"
            android:text="@string/website"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headQuaterTitleTv" />

        <TextView
            android:id="@+id/websiteTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:background="@drawable/bg2"
            android:fontFamily="@font/font_regular"
            android:gravity="center|left"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/websiteTitleTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/websiteTitleTv"
            app:layout_constraintTop_toTopOf="@+id/websiteTitleTv" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/websiteTitleTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>